[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools_scm]
fallback_version = "999"

[project]
name = "pynhd"
description = "Access and navigate NHDPlus V2 via various web services, e.g., NLDI and WaterData."
authors = [{name = "Taher Chegini", email = "cheginit@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "async-retriever>=0.3.10",
    "cytoolz",
    "geopandas>=0.10",
    "loguru",
    "networkx",
    "numpy>=1.17",
    "pandas>=1.0",
    "pyarrow>=1.0.1",
    "pygeoogc>=0.13.10",
    "pygeoutils>=0.13.11",
    "shapely>=1.8",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://docs.hyriver.io/readme/pynhd.html"
Issues = "https://github.com/hyriver/pynhd/issues"
CI = "https://github.com/hyriver/pynhd/actions"
Changelog = "https://docs.hyriver.io/changelogs/pynhd.html"

[project.optional-dependencies]
nhdplus = [
    "py7zr",
    "pyogrio",
]
test = [
    "coverage[toml]",
    "pytest-cov",
    "pytest-xdist[psutil]",
]
typeguard = [
    "coverage[toml]",
    "pygments",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "typeguard",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
pynhd = ["py.typed"]

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox"

[tool.pytest.ini_options]
addopts = "--ignore=noxfile.py -n=auto -v --cov=pynhd --cov-report xml --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
testpaths = [
    "tests",
    "pynhd",
]
filterwarnings =[
    "ignore:.*distutils.*",
    "ignore:.*--rsyncdir command line argument.*",
    "ignore:.*numpy.ndarray size changed.*",
]

[tool.coverage.run]
branch = true
parallel = true
source = ['pynhd']

[tool.coverage.report]
exclude_lines = [
    'raise ServiceUnavailableError',
]
ignore_errors = true

[tool.mypy]
strict = true
check_untyped_defs = true
allow_untyped_calls = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "pynhd"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pycln]
expand_stars = true
verbose = true
all = true
no_gitignore = false

[tool.black]
line-length = 100
target-version = ['py38']

[tool.refurb]
quiet = true
python_version = "3.8"

[tool.pyright]
include = ["pynhd"]
exclude = [
    ".nox/",
    "**/__pycache__",
    "**/__init__.py",
    "tests/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportUnnecessaryIsInstance = false
