[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "pynhd"
description = "Access and navigate NHDPlus V2 via various web services, e.g., NLDI and WaterData."
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "async-retriever>=0.19.3,<0.20",
  "cytoolz",
  "geopandas>=1",
  "networkx",
  "numpy>=2",
  "pandas>=1",
  "pyarrow>=1.0.1",
  "pygeoogc>=0.19.3,<0.20",
  "pygeoutils>=0.19.5,<0.20",
  "shapely>=2",
]
optional-dependencies.dev = [
  "ipykernel",
  "ipywidgets",
  "py7zr",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.nhdplus = [
  "py7zr",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pandas-stubs",
  "pyright",
  "scipy-stubs",
  "types-geopandas",
  "types-networkx",
  "types-pyyaml",
  "types-shapely",
]
urls.Changelog = "https://docs.hyriver.io/changelogs/pynhd.html"
urls.CI = "https://github.com/hyriver/pynhd/actions"
urls.Homepage = "https://docs.hyriver.io/readme/pynhd.html"
urls.Issues = "https://github.com/hyriver/pynhd/issues"

[tool.hatch]
build.targets.wheel.packages = [
  "src/pynhd",
]
version.source = "vcs"

[tool.pixi.environments]
test310 = { features = [ "test", "py310" ] }
test314 = { features = [ "test", "py314" ] }
dev = { features = [ "dev", "test", "py314" ] }
typecheck = { features = [ "typecheck", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }

[tool.pixi.feature.dev.pypi-dependencies]
async_retriever = { git = "https://github.com/hyriver/async-retriever" }
pygeoutils = { git = "https://github.com/hyriver/pygeoutils" }
pygeoogc = { git = "https://github.com/hyriver/pygeoogc" }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"
tomli = "*"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
libgdal-core = "*"
hdf5 = "*"
libnetcdf = "*"

[tool.pixi.feature.test.pypi-dependencies]
async_retriever = { git = "https://github.com/hyriver/async-retriever" }
pygeoutils = { git = "https://github.com/hyriver/pygeoutils" }
pygeoogc = { git = "https://github.com/hyriver/pygeoogc" }

[tool.pixi.feature.test.tasks]
test = { cmd = [
  "pytest",
  "-m",
  "not network",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
] }
test-network = { cmd = [
  "pytest",
  "-m",
  "network",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
] }
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"

[tool.pixi.pypi-dependencies]
pynhd = { path = ".", editable = true }

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  ".nox",
  "__pycache__",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # refurb
  "FURB",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]
lint.ignore = [
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  # specific type error ignored
  "PGH003",
  # top-level imports
  "PLC0415",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]
lint.per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
]
lint.extend-safe-fixes = [
  # zip with strict=True
  "B905",
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [
  "async_retriever",
  "pygeoogc",
  "pygeoutils",
  "pynhd",
  "py3dep",
  "hydrosignatures",
  "pygeohydro",
  "pydaymet",
  "pygridmet",
  "pynldas2",
  "tiny_retriever",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox,**/us_abbrs.py,cache"
ignore-words-list = "gage,gages,paramss,trough"

[tool.pyproject-fmt]
expand_tables = [ "tool.pixi" ]

[tool.pyright]
pythonVersion = "3.11"
include = [ "src" ]
typeCheckingMode = "strict"
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "-v",
  "--durations=5",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
ini_options.filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*'cgi' is deprecated.*",
  "ignore:.*Ensure you extract a single element.*",
  "ignore:.*Deprecated in Pydantic V2.0.*",
]
ini_options.markers = [
  "network: tests that make real network calls to external services (deselect with '-m \"not network\"')",
]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.branch = true
run.parallel = true
run.source_pkgs = [
  "pynhd",
]
paths.source = [ "src", "*/site-packages" ]
report.exclude_lines = [
  "if TYPE_CHECKING:",
  "raise ServiceUnavailableError",
]
report.ignore_errors = true
report.omit = [
  "**/__init__.py",
]
