[metadata]
name = pynhd
description = Process and access NHDPlus V2 data through NLDI and WaterData web services.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cheginit/pynhd
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
project_urls =
    Homepage = https://github.com/cheginit/pynhd
    Issues = https://github.com/cheginit/pynhd/issues
    CI = https://github.com/cheginit/pynhd/actions
    Changelog = https://github.com/cheginit/pynhd/blob/main/HISTORY.rst

[options]
packages = find:
install_requires =
    async_retriever>=0.2.4
    cytoolz
    geopandas>=0.7
    networkx
    numpy>=1.17
    pandas>=1.0
    pyarrow
    pygeoogc>=0.11.5
    pygeoutils>=0.11.4
    requests
    shapely>=1.6
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-clarity
    pytest-cov
    pytest-sugar
    pytest-xdist[psutil]

[options.package_data]
pynhd =
    py.typed

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    D107 # no need to add docstring for __init__
    D105 # no need to add docstring to magic methods
exclude =
    .eggs
    __init__.py
    .ipynb_checkpoints
    .nox
    tests/*.py
    noxfile.py

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox
